--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ install_requires =
     requests >= 2.28.2
     scipy >= 1.10.1
     seaborn >= 0.12.2
+    tqdm >= 4.0.0
 
 [options.packages.find]
 where = src
