--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ install_requires =
     scipy >= 1.10.1
     seaborn >= 0.12.2
     tqdm >= 4.0.0
+    sphinx_rtd_theme >= 1.2.0
 
 [options.packages.find]
 where = src
